# FakeIt

./: .gitignore  CMakeLists.txt  README.md
tests/: default_event_formatting_tests.cpp  miscellaneous_tests.cpp  stubbing_tests.cpp  verification_tests.cpp
